...
          key: _key,
          child: Column(
            children: [
              TextFormField(
                controller: _emailController,
                decoration: const InputDecoration(hintText: 'Enter email'),
                key: const ValueKey('email'),
                validator: (value) => Validator.validateEmail(value ?? ''),
              ),
              const SizedBox(
                height: 16.0,
              ),
              TextFormField(
                controller: _passwordController,
                decoration: const InputDecoration(hintText: 'Enter password'),
                key: const ValueKey('pass'),
                obscureText: true,
                validator: (value) => Validator.validatePassword(value ?? ''),
              ),
              const SizedBox(
                height: 32.0,
              ),
...
